--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -34,7 +34,7 @@ dataSources:
         - name: Pool
           file: ./abis/pool.json
       eventHandlers:
-        - event: PoolCreated(indexed address,indexed address,indexed uint24,int24,address)
+        - event: PoolCreated(indexed address,indexed address,indexed uint24,int24,bool,address)
           handler: handlePoolCreated
 templates:
   - kind: ethereum/contract
